# atsamd

./: crates.json
boards/arduino_mkrnb1500/: Cargo.toml  README.md
boards/arduino_mkrnb1500/examples/: blinky_basic.rs  sara_uart_basic.rs
boards/arduino_mkrnb1500/src/: lib.rs
boards/atsame54_xpro/: CHANGELOG.md
boards/feather_m0/: CHANGELOG.md
boards/feather_m0/.cargo/: config.toml
boards/feather_m4/: CHANGELOG.md
boards/metro_m0/: CHANGELOG.md
boards/metro_m4/: CHANGELOG.md
boards/pygamer/: CHANGELOG.md
boards/samd11_bare/: CHANGELOG.md
boards/trrs_trinkey/: Cargo.toml  README.md  memory.x
boards/trrs_trinkey/examples/: i2c.rs  usb_hid.rs
boards/trrs_trinkey/src/: lib.rs
hal/: CHANGELOG.md
