[package]
name = "arduino_mkrnb1500"
version = "0.1.0"
authors = ["Erik Fong <quantumerikfong@gmail.com>"]
description = "Board Support crate for the Arduino MKR NB 1500"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.15"
default-features = false
features = ["samd21g", "library"]

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"
